--- a/Gomoku/MainForm.resx
+++ b/Gomoku/MainForm.resx
@@ -117,4 +117,109 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="board.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAfgAAAH4CAYAAACmKP9/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAFupJREFUeF7t17GtRduNBcGfvVJSNJOKlMADKBrTOHezjHLotLnAf/7v3//6DwDw
+        FgMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y
+        8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMP
+        AA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADwIAMPAA8y8ADw
+        IAMPAA/6mYH/559/AOAT/tqpr/mpgf/r/v9Nt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2
+        rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh
+        29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3
+        DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt
+        6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxA
+        t6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6Dau
+        dbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6Daudbd+auAB4Av+2qmv8cEPdBu6Dd2G
+        buNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90
+        G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNa
+        d8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN
+        3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vA
+        D3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu
+        41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qb
+        ug3dhm7jWnfrpwYeAL7gr536Gh/8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8
+        QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2
+        rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh
+        29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3
+        DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt
+        6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxA
+        t6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3fmrgAeAL/tqpr/HBD3Qbug3dhm7jWnfL
+        wA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2G
+        buNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90
+        G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNa
+        d8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN
+        3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vA
+        D3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu
+        41p366cGHgC+4K+d+hof/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQ
+        beg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8
+        QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2
+        rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh
+        29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3
+        DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt
+        6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51t35q4AHgC/7aqa/xwQ90G7oN3YZu41p3y8APdBu6
+        Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfL
+        wA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2G
+        buNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90
+        G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNa
+        d8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN
+        3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad+un
+        Bh4AvuCvnfoaH/xAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51
+        twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQ
+        beg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8
+        QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2
+        rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh
+        29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3
+        DPxAt6Hb0G3oNq51twz8QLeh29Bt6Daudbd+auAB4Av+2qmv8cEPdBu6Dd2GbuNad8vAD3Qbug3dhm7j
+        WnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6
+        Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfL
+        wA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2G
+        buNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90
+        G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNa
+        d8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfrpwYeAL7g
+        r536Gh/8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3
+        odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51
+        twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQ
+        beg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8
+        QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2
+        rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh
+        29Bt6DaudbcM/EC3odvQbeg2rnW3fmrgAeAL/tqpr/HBD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8AP
+        dBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7j
+        WnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6
+        Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfL
+        wA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2G
+        buNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90
+        G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p366cGHgC+4K+d+hof
+        /EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3o
+        Nq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3
+        odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51
+        twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQ
+        beg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8
+        QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2
+        rnW3DPxAt6Hb0G3oNq51t35q4AHgC/7aqa/xwQ90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3d
+        hm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8AP
+        dBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7j
+        WnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6
+        Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfL
+        wA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2G
+        buNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad+unBh4AvuCvnfoaH/xAt6Hb
+        0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM
+        /EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3o
+        Nq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3
+        odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51
+        twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQ
+        beg2rnW3DPxAt6Hb0G3oNq51twz8QLeh29Bt6DaudbcM/EC3odvQbeg2rnW3DPxAt6Hb0G3oNq51twz8
+        QLeh29Bt6Daudbd+auAB4Av+2qmv8cEPdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3
+        y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3d
+        hm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8AP
+        dBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7j
+        WnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6
+        Dd2GbuNad8vAD3Qbug3dhm7jWnfLwA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfL
+        wA90G7oN3YZu41p3y8APdBu6Dd2GbuNad8vAD3Qbug3dhm7jWnfrpwYeAL7gr536mp8ZeADgf2fgAeBB
+        Bh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTg
+        AeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4A
+        HmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AHmTgAeBBBh4AnvOv//wX
+        hoyOiZW9B8IAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
