--- a/Gomoku/Properties/Resources.resx
+++ b/Gomoku/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="blackChess" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\blackChess.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="welcomePage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\welcomePage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="whiteChess" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\whiteChess.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
